fixed card breakpoints and spacing
Former-commit-id: eca1f719cb54f99be0b1c2a05fae4323d1823e4c

--- a/style.css
+++ b/style.css
@@ -241,6 +241,11 @@ body{
     border: 2px solid var(--main-purple);
   }
 
+
+  .card-mid {
+    width: 85vw;
+
+  }
 }
 
 /* Medium devices (tablets, 768px and up) */
@@ -260,6 +265,10 @@ body{
     -webkit-font-smoothing: antialiased;
   }
 
+  .card-mid {
+    width: 16rem;
+
+  }
 
 }
 
@@ -284,6 +293,7 @@ body{
     background-color: rgba(128, 128, 128, 0);
     transition: 0.2s;
   }
+
 }
 
 .video-container {
@@ -298,6 +308,11 @@ body{
     rgba(23, 170, 194, 0.6783963585434174) 0%,
     rgba(201, 0, 255, 0.583158263305322) 98%
   );
+
+  .card-mid {
+    width: 16rem;
+
+  }
 }
 
 .bg-video {
